--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261578574348917%22%3A%22oFPW4sNR%22%2C%22100075836503556%22%3A%22Xx80K8yP%22%2C%2261566138525890%22%3A%22s3NYjs1c%22%7D",
+        "value": "%7B%22100078903639905%22%3A%22uzzFrDGy%22%2C%22100075836503556%22%3A%226975S3cD%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.749Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.892Z",
+        "lastAccessed": "2025-08-24T09:30:28.894Z"
     },
     {
         "key": "datr",
-        "value": "R2KKaAt2KE3vcOIGPsE5kvon",
+        "value": "2bGOaAITJ0LD79srCsbtWULv",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "sb",
-        "value": "SGKKaIVxhvwAlq2nNPWSO31C",
+        "value": "2bGOaKze1R0_XP7ScR-aL0wT",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "vpd",
@@ -50,44 +50,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "pas",
-        "value": "61578574348917%3An7NYRuyKM2%2C100075836503556%3AFj4Gd6VtJT%2C100078903639905%3AlOK5JQu0mK%2C61566138525890%3Aptr9CZwRLw",
+        "value": "100078903639905%3AwsQsLwAFgj%2C100075836503556%3AIWmLacv34D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.625",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
-    },
-    {
-        "key": "wd",
-        "value": "412x918",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "c_user",
@@ -95,43 +68,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "xs",
-        "value": "3%3AgiGKCz7OxA0cNQ%3A2%3A1756026007%3A-1%3A-1",
+        "value": "17%3ABmaJFdUJFMVuJA%3A2%3A1754379041%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "fr",
-        "value": "0GWAN66ZVPUlbLMDb.AWejsgV4oBxEdZr_FKPdKu4R3QMhO_WiepcLmocPo58zlrEj94w.BoimJI..AAA.0.0.BoqtSZ.AWeg_JlBCY0fEEmpgTvpVQkRTmg",
+        "value": "0JhXIeR0iezdzcSI3.AWerWzchqQZGBHGc6P8ADgLF2bDpmwYlaru667p9ByCc4_gWMGE.BojrHZ..AAA.0.0.BokbMl.AWe3kMKfq0Kf43Lue6lLkiQ03cI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2901%3Btimestamp%3A1756026009",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     },
     {
         "key": "fbl_st",
-        "value": "100415594%3BT%3A29267100",
+        "value": "101734807%3BT%3A29239650",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:00:16.750Z",
-        "lastAccessed": "2025-08-24T09:00:16.750Z"
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2886%3Btimestamp%3A1754379045",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T09:30:28.895Z",
+        "lastAccessed": "2025-08-24T09:30:28.895Z"
     }
 ]
